# Backend-Test-

./: .env.example  README.md  pyproject.toml
apis/: admin.py  models.py  serializers.py  urls.py  views.py
apis/migrations/: 0001_initial.py
apis/tests/: test_models.py  test_serializers.py  test_views.py
app/: settings.py  urls.py
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_order_paid.py
products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/tests/: test_models.py
